add first draft for api endpoints (untested!)
